--- a/Ionic4/src/app/login/login.page.html
+++ b/Ionic4/src/app/login/login.page.html
@@ -14,7 +14,7 @@
             <div class="login-form">
                 <form>
                     <ion-item>
-                        <ion-label floating>
+                        <ion-label position="floating">
                             <ion-icon name="contact" item-start></ion-icon>
                             {{'userName' | translate}}
                         </ion-label>
@@ -22,7 +22,7 @@
                     </ion-item>
 
                     <ion-item>
-                        <ion-label floating>
+                        <ion-label position="floating">
                             <ion-icon name="lock" item-start></ion-icon>
                             {{'password' | translate}}
                         </ion-label>
