--- a/Ionic4/src/app/inspection/inspection-buildings/inspection-buildings.component.html
+++ b/Ionic4/src/app/inspection/inspection-buildings/inspection-buildings.component.html
@@ -1,3 +1,29 @@
-<p>
-  inspection-buildings works!
-</p>
+<ion-header class="page-header" no-padding no-margin>
+  <ion-menu-toggle menu="inspection-menu"></ion-menu-toggle>
+  <ion-toolbar color="primary">
+    <ion-menu-button menu="inspection-menu" slot="start"></ion-menu-button>
+    <ion-title>{{'generalInformation' | translate}}
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+  <ion-list class="list-items">
+    <ion-list-header>
+      {{currentInspection?.civicNumber}}{{currentInspection?.civicLetter}}, {{currentInspection?.laneName}}
+    </ion-list-header>
+    <ion-item ion-item *ngFor="let building of buildings; let i = index" detail="true"
+      [routerLink]="['/inspection-building', building.idBuilding]">
+      <ion-icon name="home" slot="start" [style.color]="!building.isMainBuilding ? 'grey' : ''"></ion-icon>
+      <ion-label>
+        <h2>{{getBuildingName(building, i)}}</h2>
+        <h3>{{getBuildingDescription(building, i)}}</h3>        
+      </ion-label>
+    </ion-item>
+  </ion-list>
+</ion-content>
+
+<ion-footer>
+  <ion-toolbar color="primary">
+  </ion-toolbar>
+</ion-footer>
