--- a/Ionic4/src/app/inspection/inspection-fire-hydrants/inspection-fire-hydrants.component.html
+++ b/Ionic4/src/app/inspection/inspection-fire-hydrants/inspection-fire-hydrants.component.html
@@ -1,3 +1,40 @@
-<p>
-  inspection-fire-hydrants works!
-</p>
+<ion-header class="page-header" no-padding no-margin>
+    <ion-menu-toggle menu="inspection-menu"></ion-menu-toggle>
+    <ion-toolbar color="primary">
+      <ion-menu-button menu="inspection-menu" slot="start"></ion-menu-button>
+      <ion-title>{{'fireHydrantList' | translate}}
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
+  
+  <ion-content>
+
+      <ion-list class="list-items">
+          <ion-list-header>
+            {{currentInspection?.civicNumber}}{{currentInspection?.civicLetter}}, {{currentInspection?.laneName}}
+          </ion-list-header>
+          <ion-item *ngFor="let hydrant of fireHydrants | orderBy:'number'">
+            <ion-icon name="icon-fire-hydrant" item-start [style.color]="hydrant.color" [style.background-color]="hydrant.color == '#FFFFFF' ? 'lightgray': null" large>
+              </ion-icon>
+              <button class="action-list-button" (click)="onDeleteFireHydrant(hydrant.idFireHydrant)">
+                  <ion-icon class="ion-md-trash"></ion-icon>
+              </button>
+              <div class="fire-hydrant-info">
+                  <h2>{{hydrant.number}}</h2>
+                  <p>{{hydrant.address | formatCoordinates}}</p>
+              </div>
+          </ion-item>
+      </ion-list>
+
+  </ion-content>
+  
+  <ion-footer>
+    <ion-toolbar color="primary">
+        <ion-buttons>
+            <ion-button (click)="onItemClick(currentInspection.idCity)" slot="start">
+                <ion-icon slot="start" name="add-circle"></ion-icon>
+                {{'addButton' | translate}}
+            </ion-button>
+        </ion-buttons>
+    </ion-toolbar>
+  </ion-footer>
