--- a/Ionic4/src/app/inspection/inspection-implantation-plan/inspection-implantation-plan.component.html
+++ b/Ionic4/src/app/inspection/inspection-implantation-plan/inspection-implantation-plan.component.html
@@ -1,3 +1,19 @@
-<p>
-  inspection-implantation-plan works!
-</p>
+<ion-header class="page-header" no-padding no-margin>
+    <ion-menu-toggle menu="inspection-menu"></ion-menu-toggle>
+    <ion-toolbar color="primary">
+      <ion-menu-button menu="inspection-menu" slot="start"></ion-menu-button>
+      <ion-title>{{'implantationPlan' | translate}}
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
+  
+  <ion-content>
+
+      <app-pictures [repo]="picRepo" [multiPictures]="false" height="80vh" [saveAuto]="false" [(ngModel)]="IdBuilding">{{'loading' | translate}}</app-pictures>
+
+  </ion-content>
+  
+  <ion-footer>
+    <ion-toolbar color="primary">
+    </ion-toolbar>
+  </ion-footer>
