--- a/Ionic4/src/app/shared/components/custom-select/custom-select.component.html
+++ b/Ionic4/src/app/shared/components/custom-select/custom-select.component.html
@@ -2,7 +2,7 @@
   <ion-item>
     <ion-label>{{title}}</ion-label>
     <ion-icon class="ion-md-close"></ion-icon>
-    <ion-select [ngModel]="selectedValue" placeholder="{{title}}" okText="Ok" cancelText="{{'cancel' | translate}}" (ionChange)="selectedItemChanged($event)">
+    <ion-select [value]="selectedValue" placeholder="{{title}}" okText="Ok" cancelText="{{'cancel' | translate}}" (ionChange)="selectedItemChanged($event)">
       <ion-select-option *ngFor="let item of dataSource">{{item}}</ion-select-option>
     </ion-select>
   </ion-item>
