#295 Make inspection's navigation great again.

--- a/Ionic4/src/app/inspection/components/course-detail-lane/course-detail-lane.component.html
+++ b/Ionic4/src/app/inspection/components/course-detail-lane/course-detail-lane.component.html
@@ -24,7 +24,7 @@
       <div *ngIf="form.get('idLane').hasError('required')" class="validation-error-text">{{'laneRequired' | translate}}</div>
     </ion-list>
   
-    <ion-list class="list-items">
+    <ion-list class="list-items ion-no-padding">
       <ion-item-divider>{{'direction' | translate}}</ion-item-divider>
       <ion-item>
         <ion-label [hidden]="true">{{'direction' | translate}}</ion-label>
