--- a/Ionic4/src/app/inspection/inspection-buildings/inspection-buildings.component.html
+++ b/Ionic4/src/app/inspection/inspection-buildings/inspection-buildings.component.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-list class="list-items" *ngIf="buildings != null">
+  <ion-list class="list-items ion-no-padding" *ngIf="buildings != null">
     <ion-list-header>
       {{currentInspection?.civicNumber}}{{currentInspection?.civicLetter}}, {{currentInspection?.laneName}}
     </ion-list-header>
