--- a/Ionic4/src/app/inspection/inspection-courses/inspection-courses.component.html
+++ b/Ionic4/src/app/inspection/inspection-courses/inspection-courses.component.html
@@ -9,7 +9,7 @@
 
 <ion-content>
 
-  <ion-list class="list-items">
+  <ion-list class="list-items ion-no-padding">
     <ion-list-header>
       {{currentInspection?.civicNumber}}{{currentInspection?.civicLetter}}, {{currentInspection?.laneName}}
     </ion-list-header>
