--- a/Ionic4/src/app/login/login.page.html
+++ b/Ionic4/src/app/login/login.page.html
@@ -1,46 +1,44 @@
 <ion-content padding class="animated fadeIn login auth-page">
 
-    <div class="login-page-box">
+    <div class="animated fadeInDown logo-parent">
 
-        <div class="animated fadeInDown logo-parent">
-
-            <div class="logo-centerer">
-                <img class="app-logo-img" src="../assets/img/logo-transparent.png" onclick="test()">
-            </div>
+        <div class="logo-centerer">
+            <img class="app-logo-img" src="../assets/img/logo-transparent.png" onclick="test()">
         </div>
+    </div>
 
-        <div class="login-editors">
+    <div class="login-page-box">
+        <div class="login-form">
+            <form>
+                <ion-item>
+                    <ion-label position="floating">
+                        <ion-icon name="contact" item-start></ion-icon>
+                        {{'userName' | translate}}
+                    </ion-label>
+                    <ion-input type="email" [(ngModel)]="userName" [ngModelOptions]="{standalone: true}"></ion-input>
+                </ion-item>
 
-            <div class="login-form">
-                <form>
-                    <ion-item>
-                        <ion-label position="floating">
-                            <ion-icon name="contact" item-start></ion-icon>
-                            {{'userName' | translate}}
-                        </ion-label>
-                        <ion-input type="email" [(ngModel)]="userName" [ngModelOptions]="{standalone: true}"></ion-input>
-                    </ion-item>
+                <ion-item>
+                    <ion-label position="floating">
+                        <ion-icon name="lock" item-start></ion-icon>
+                        {{'password' | translate}}
+                    </ion-label>
+                    <ion-input type="password" [(ngModel)]="password" [ngModelOptions]="{standalone: true}"
+                               (keypress)="onKeyPress($event.keyCode)"></ion-input>
+                </ion-item>
+            </form>
 
-                    <ion-item>
-                        <ion-label position="floating">
-                            <ion-icon name="lock" item-start></ion-icon>
-                            {{'password' | translate}}
-                        </ion-label>
-                        <ion-input type="password" [(ngModel)]="password" [ngModelOptions]="{standalone: true}"
-                                   (keypress)="onKeyPress($event.keyCode)"></ion-input>
-                    </ion-item>
-                </form>
-
-                <div>
-                    <ion-button expand="block" color="primary" tappable (click)="onLogin()">
-                        <ion-icon slot="start" name="log-in"></ion-icon>
-                        {{'login' | translate}}
-                    </ion-button>
-                </div>
-                <p id="version">{{'version' | translate}} : {{version}}</p>
-
-            </div>
-
+            <ion-item padding="true">
+                <ion-button expand="block" color="primary" (click)="onLogin()">
+                    <ion-icon slot="start" name="log-in"></ion-icon>
+                    {{'login' | translate}}
+                </ion-button>
+            </ion-item>
+            <ion-button expand="block" color="primary" (click)="onLogin()">
+                <ion-icon slot="start" name="log-in"></ion-icon>
+                {{'login' | translate}}
+            </ion-button>
+            <p id="version">{{'version' | translate}} : {{version}}</p>
         </div>
     </div>
 
