--- a/Ionic4/src/app/shared/components/pictures/pictures.component.html
+++ b/Ionic4/src/app/shared/components/pictures/pictures.component.html
@@ -1,6 +1,6 @@
 <ion-spinner [style.display]="isLoading ? 'block' : 'none'" item-start></ion-spinner>
 
-<ion-list class="list-items">
+<ion-list class="list-items ion-no-padding">
     <ion-item-divider>
         Photo(s)
         <ion-button slot="end" (click)="selectPicture()" color="primary">
