--- a/Ionic4/src/app/inspection/inspection-home/inspection-home.component.html
+++ b/Ionic4/src/app/inspection/inspection-home/inspection-home.component.html
@@ -7,7 +7,7 @@
 
     <ion-content no-padding  class="toolbar-gradient">
       <ion-list class="menu-items">
-        <ion-item menuClose class="text-menu" routerLink="/inspections-list" *ngFor="let menuItem of menuItems" [routerLink]="menuItem.page" routerLinkActive="active-item">
+        <ion-item menuClose class="text-menu" routerLink="/inspections-list" *ngFor="let menuItem of menuItems" [routerLink]="['/' + getFullUrl(menuItem.page)]" routerLinkActive="active-item">
           <ion-icon slot="left" [name]="menuItem.icon"></ion-icon>
           <span ion-text>{{menuItem.title}}</span>
         </ion-item>
