--- a/Ionic4/src/app/inspection-building/inspection-building-home/inspection-building-home.component.html
+++ b/Ionic4/src/app/inspection-building/inspection-building-home/inspection-building-home.component.html
@@ -1,3 +1,33 @@
-<p>
-  inspection-building-home works!
-</p>
+<ion-split-pane when="md" contentId="inspection-building-content">
+
+  <ion-menu contentId="inspection-building-content" menuId="inspection-building-menu" type="push">
+
+    <ion-header color="primary">
+      <menu-profile></menu-profile>
+    </ion-header>
+
+    <ion-content class="toolbar-gradient">
+      <ion-list class="menu-items">
+
+        <div *ngFor="let menuItem of menuItems">
+          <ion-item menuClose class="text-menu" *ngIf="menuItem.enabled" [routerLink]="[getFullUrl(menuItem.page)]" routerLinkActive="active-item">            
+            <ion-label><ion-icon [name]="menuItem.icon" slot="start" size="big"></ion-icon>{{menuItem.title}}</ion-label>
+          </ion-item>
+        </div>
+      </ion-list>
+    </ion-content>
+
+    <ion-footer>
+      <ion-toolbar class="user-profile" color="primary">
+        <ion-button size="small" expand="full" color="light" menuClose (click)="goBack()">
+          <ion-icon name="undo" slot="left"></ion-icon>
+          <p>{{'backToBuildingList' | translate}}</p>
+        </ion-button>
+      </ion-toolbar>
+    </ion-footer>
+
+  </ion-menu>
+
+  <ion-router-outlet id="inspection-building-content"></ion-router-outlet>
+
+</ion-split-pane>
