Feat(#295) Contacts and fire safeties are now correctly working.

--- a/Ionic4/src/app/inspection-building/inspection-building-home/inspection-building-home.component.html
+++ b/Ionic4/src/app/inspection-building/inspection-building-home/inspection-building-home.component.html
@@ -20,7 +20,7 @@
     <ion-footer>
       <ion-toolbar class="user-profile" color="primary">
         <ion-button size="small" expand="full" color="light" menuClose (click)="goBack()">
-          <ion-icon name="undo" slot="left"></ion-icon>
+          <ion-icon name="undo" slot="start"></ion-icon>
           <p>{{'backToBuildingList' | translate}}</p>
         </ion-button>
       </ion-toolbar>
