--- a/Ionic4/src/app/inspection-building/components/building-alarm-panel/building-alarm-panel.component.html
+++ b/Ionic4/src/app/inspection-building/components/building-alarm-panel/building-alarm-panel.component.html
@@ -1,3 +1,53 @@
-<p>
-  building-alarm-panel works!
-</p>
+<ion-toolbar color="primary">
+  <ion-buttons slot="start">
+      <ion-button slot="icon-only" (click)="onCancelEdition()">
+          <ion-icon name="arrow-back"></ion-icon>
+      </ion-button>
+  </ion-buttons>
+  <ion-title>{{'fireSrinklerDetail' | translate}}</ion-title>
+</ion-toolbar>
+
+<ion-content>
+  <ion-list [formGroup]="form" class="list-items ion-no-padding">
+
+    <ion-item [class.invalid]="!form.controls.idAlarmPanelType.valid">
+      <ion-label>{{'type' | translate}}</ion-label>
+      <ion-select formControlName="idAlarmPanelType" okText="Ok" cancelText="{{'cancel' | translate}}">
+        <ion-select-option *ngFor="let t of types" [value]="t.id">{{t.name}}</ion-select-option>
+      </ion-select>
+    </ion-item>
+    <div *ngIf="!form.controls.idAlarmPanelType.valid" class="validation-error-text">{{'typeRequired' | translate}}</div>
+
+    <ion-item-group>
+      <ion-item-divider>{{'localization' | translate}}</ion-item-divider>
+      <ion-item>
+        <ion-label>{{'floor' | translate}}</ion-label>
+        <ion-input type="text" maxlength="3" placeholder="{{'floor' | translate}}" formControlName="floor"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label>{{'wall' | translate}}</ion-label>
+        <ion-select formControlName="wall" placeholder="{{'wall' | translate}}" okText="Ok" cancelText="{{'cancel' | translate}}">
+          <ion-select-option *ngFor="let wall of walls">{{wall}}</ion-select-option>
+        </ion-select>
+      </ion-item>
+      <ion-item>
+        <ion-label>{{'division' | translate}}</ion-label>
+        <ion-select formControlName="sector" placeholder="{{'division' | translate}}" okText="Ok" cancelText="{{'cancel' | translate}}">
+          <ion-select-option *ngFor="let sector of sectors">{{sector}}</ion-select-option>
+        </ion-select>
+      </ion-item>
+    </ion-item-group>
+
+  </ion-list>
+</ion-content>
+
+<ion-footer class="page-footer">
+  <ion-toolbar color="primary">
+      <ion-buttons left>
+          <ion-button *ngIf="!isNew" (click)="onDeleteAlarmPanel()">
+              <ion-icon name="trash" slot="start"></ion-icon>
+              {{'contactDeleteButton' | translate}}
+          </ion-button>
+      </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
