--- a/Ionic4/src/app/inspection-building/inspection-building-anomalies/inspection-building-anomalies.component.html
+++ b/Ionic4/src/app/inspection-building/inspection-building-anomalies/inspection-building-anomalies.component.html
@@ -1,3 +1,20 @@
-<p>
-  inspection-building-anomalies works!
-</p>
+<ion-header class="page-header" no-padding no-margin>
+  <ion-menu-toggle menu="inspection-menu"></ion-menu-toggle>
+  <ion-toolbar color="primary">
+    <ion-menu-button menu="inspection-menu" slot="start"></ion-menu-button>
+    <ion-title>{{name}}</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+
+<p>building-anomalies</p>
+
+</ion-content>
+
+<ion-footer>
+  <ion-toolbar color="primary">
+
+
+  </ion-toolbar>
+</ion-footer>
