--- a/Ionic4/src/app/inspection-building/inspection-building-contacts/inspection-building-contacts.component.html
+++ b/Ionic4/src/app/inspection-building/inspection-building-contacts/inspection-building-contacts.component.html
@@ -1,3 +1,28 @@
-<p>
-  inspection-building-contacts works!
-</p>
+<ion-header class="page-header" no-padding no-margin>
+  <ion-menu-toggle menu="inspection-menu"></ion-menu-toggle>
+  <ion-toolbar color="primary">
+    <ion-menu-button menu="inspection-menu" slot="start"></ion-menu-button>
+    <ion-title>{{name}}</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+
+  <ion-list class="list-items ion-no-padding">
+    <ion-list-header>{{'buildingContact' | translate}}</ion-list-header>
+    <ion-item *ngFor="let contact of contacts | orderBy:'firstName'" (click)="onItemClick(contact.id)">
+      <ion-icon slot="start" [name]="contact.isOwner ? 'key' : 'contact'" small></ion-icon>
+      {{contact.firstName}}{{(contact.lastName || '') != '' ? ' ' : ''}}{{contact.lastName}}
+    </ion-item>
+  </ion-list>
+
+</ion-content>
+
+<ion-footer>
+  <ion-toolbar color="primary">
+    <ion-button  (click)="onItemClick(null)">
+      <ion-icon name="add-circle" slot="start"></ion-icon>
+      {{'addContactButton' | translate}}
+    </ion-button>
+  </ion-toolbar>
+</ion-footer>
