--- a/Ionic4/src/app/inspection-building/inspection-building-details/inspection-building-details.component.html
+++ b/Ionic4/src/app/inspection-building/inspection-building-details/inspection-building-details.component.html
@@ -1,3 +1,132 @@
-<p>
-  inspection-building-details works!
-</p>
+<ion-header class="page-header" no-padding no-margin>
+  <ion-menu-toggle menu="inspection-menu"></ion-menu-toggle>
+  <ion-toolbar color="primary">
+    <ion-menu-button menu="inspection-menu" slot="start"></ion-menu-button>
+    <ion-title>{{name}}
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+  <ion-list [formGroup]="form" class="list-items ion-no-padding">
+    <ion-list-header>{{'buildingDetail' | translate}}</ion-list-header>
+
+    <ion-item-group>
+      <ion-item-divider>{{'building' | translate}}</ion-item-divider>
+      <ion-item>
+        <ion-label>Alias</ion-label>
+        <ion-input placeholder="alias" type="text" maxlength="50" formControlName="aliasName"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label>{{'corporateName' | translate }}</ion-label>
+        <ion-input placeholder="{{'corporateName' | translate }}" maxlength="50" type="text" formControlName="corporateName"></ion-input>
+      </ion-item>
+      <ion-item *ngIf="allTypes && allTypes.buildingTypes" >
+        <ion-label>{{'type' | translate}}</ion-label>
+        <ion-select formControlName="idBuildingType" okText="Ok" cancelText="{{'cancel' | translate}}">
+          <ion-select-option *ngFor="let t of allTypes.buildingTypes | orderBy:'name'" [value]="t.id">{{t.name}}</ion-select-option>
+        </ion-select>
+      </ion-item>
+      <ion-item>
+        <ion-label>{{'garage' | translate}}</ion-label>
+        <ion-select formControlName="garageType" okText="Ok" cancelText="{{'cancel' | translate}}">
+          <ion-select-option *ngFor="let key of garageTypeKeys" [value]="key">
+            {{"enumGarageType."+garageType[key] | translate}}
+          </ion-select-option>
+        </ion-select>
+      </ion-item>
+    </ion-item-group>
+    <ion-item-group [class.invalid]="!form.controls.idUnitOfMeasureHeight.valid">
+      <ion-item-divider>{{'height' | translate}}</ion-item-divider>
+        <ion-grid>
+          <ion-row>
+            <ion-col width-50>
+              <ion-item>
+                <ion-input placeholder="{{'height' | translate}}" type="number" [pattern]="decimalPattern" item-start formControlName="height"></ion-input>
+              </ion-item>
+            </ion-col>
+            <ion-col width-50>
+              <ion-item>
+                <ion-label position="floating">{{'unit' | translate}}</ion-label>
+                <ion-select class="unit-select" item-end formControlName="idUnitOfMeasureHeight" *ngIf="dimensionUnitOfMeasure" placeholder="{{'unit' | translate}}" okText="Ok" cancelText="{{'cancel' | translate}}">
+                  <ion-select-option *ngFor="let t of dimensionUnitOfMeasure | orderBy:'name'" [value]="t.id">{{t.name}}</ion-select-option>
+                </ion-select>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+        <div *ngIf="!form.controls.idUnitOfMeasureHeight.valid" class="validation-error-text">{{'measuringUnitRequired' | translate}}</div>
+      <div *ngIf="!form.controls.height.valid" class="validation-error-text">{{'heightValidationMessage' | translate}}</div>
+    </ion-item-group>
+
+    <ion-item-group [class.invalid]="!form.controls.idUnitOfMeasureEstimatedWaterFlow.valid">
+      <ion-item-divider>D.I.E.</ion-item-divider>
+      <ion-grid>
+        <ion-row>
+          <ion-col width-50>
+            <ion-item>
+              <ion-input type="tel" placeholder="DIE" [pattern]="integerPattern" item-start formControlName="estimatedWaterFlow"></ion-input>
+            </ion-item>
+          </ion-col>
+          <ion-col width-50>
+            <ion-item>
+              <ion-label position="floating">{{'unit' | translate}}</ion-label>
+              <ion-select class="unit-select" item-end placeholder="{{'unit' | translate}}" formControlName="idUnitOfMeasureEstimatedWaterFlow" *ngIf="ratesUnitOfMeasure" okText="Ok" cancelText="{{'cancel' | translate}}">
+                <ion-select-option *ngFor="let t of ratesUnitOfMeasure | orderBy:'name'" [value]="t.id">{{t.name}}</ion-select-option>
+              </ion-select>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+      <div *ngIf="!form.controls.idUnitOfMeasureEstimatedWaterFlow.valid" class="validation-error-text">{{'measuringUnitRequired' | translate}}</div>
+      <div *ngIf="!form.controls.estimatedWaterFlow.valid" class="validation-error-text">{{'dieValidationMessage' | translate}}</div>
+    </ion-item-group>
+
+    <ion-item-group>
+      <ion-item-divider>{{'construction' | translate}}</ion-item-divider>
+      <ion-item>
+        <ion-label>{{'type' | translate}}</ion-label>
+        <ion-select formControlName="idConstructionType" *ngIf="allTypes && allTypes.constructionTypes" color="secondary" okText="Ok" cancelText="{{'cancel' | translate}}">
+          <ion-select-option *ngFor="let t of allTypes.constructionTypes | orderBy:'name'" [value]="t.id">{{t.name}}</ion-select-option>
+        </ion-select>
+      </ion-item>
+      <ion-item>
+        <ion-label>{{'fireResistance' | translate}}</ion-label>
+        <ion-select formControlName="idConstructionFireResistanceType" *ngIf="allTypes && allTypes.constructionFireResistanceTypes" okText="Ok" cancelText="{{'cancel' | translate}}">
+          <ion-select-option *ngFor="let t of allTypes.constructionFireResistanceTypes | orderBy:'name'" [value]="t.id">{{t.name}}</ion-select-option>
+        </ion-select>
+      </ion-item>
+      <ion-item>
+        <ion-label>{{'siding' | translate}}</ion-label>
+        <ion-select formControlName="idBuildingSidingType" *ngIf="allTypes && allTypes.buildingSidingTypes" okText="Ok" cancelText="{{'cancel' | translate}}">
+          <ion-select-option *ngFor="let t of allTypes.buildingSidingTypes | orderBy:'name'" [value]="t.id">{{t.name}}</ion-select-option>
+        </ion-select>
+      </ion-item>
+    </ion-item-group>
+
+    <ion-item-group>
+      <ion-item-divider>{{'roof' | translate}}</ion-item-divider>
+      <ion-item>
+        <ion-label>{{'type' | translate}}</ion-label>
+        <ion-select formControlName="idRoofType" *ngIf="allTypes && allTypes.roofTypes" okText="Ok" cancelText="{{'cancel' | translate}}">
+          <ion-select-option *ngFor="let t of allTypes.roofTypes | orderBy:'name'" [value]="t.id">{{t.name}}</ion-select-option>
+        </ion-select>
+      </ion-item>
+      <ion-item>
+        <ion-label>{{'material' | translate}}</ion-label>
+        <ion-select formControlName="idRoofMaterialType" *ngIf="allTypes && allTypes.roofMaterialTypes" okText="Ok" cancelText="{{'cancel' | translate}}">
+          <ion-select-option *ngFor="let t of allTypes.roofMaterialTypes | orderBy:'name'" [value]="t.id">{{t.name}}</ion-select-option>
+        </ion-select>
+      </ion-item>
+    </ion-item-group>
+
+  </ion-list>
+
+</ion-content>
+
+<ion-footer>
+  <ion-toolbar color="primary">
+
+
+  </ion-toolbar>
+</ion-footer>
