--- a/Ionic4/src/app/inspection-building/components/building-alarm-panel/building-alarm-panel.component.html
+++ b/Ionic4/src/app/inspection-building/components/building-alarm-panel/building-alarm-panel.component.html
@@ -4,7 +4,7 @@
           <ion-icon name="arrow-back"></ion-icon>
       </ion-button>
   </ion-buttons>
-  <ion-title>{{'fireSrinklerDetail' | translate}}</ion-title>
+  <ion-title>{{'fireAlarmPanelDetail' | translate}}</ion-title>
 </ion-toolbar>
 
 <ion-content>
@@ -46,7 +46,7 @@
       <ion-buttons left>
           <ion-button *ngIf="!isNew" (click)="onDeleteAlarmPanel()">
               <ion-icon name="trash" slot="start"></ion-icon>
-              {{'contactDeleteButton' | translate}}
+              {{'fireAlarmPanelDelete' | translate}}
           </ion-button>
       </ion-buttons>
   </ion-toolbar>
