--- a/Ionic4/src/app/inspection-building/components/building-water-sprinkler/building-water-sprinkler.component.html
+++ b/Ionic4/src/app/inspection-building/components/building-water-sprinkler/building-water-sprinkler.component.html
@@ -60,7 +60,7 @@
       <ion-buttons left>
           <ion-button *ngIf="!isNew" (click)="onDeleteSprinkler()">
               <ion-icon name="trash" slot="start"></ion-icon>
-              {{'contactDeleteButton' | translate}}
+              {{'fireSprinklerDelete' | translate}}
           </ion-button>
       </ion-buttons>
   </ion-toolbar>
