--- a/Ionic4/src/app/inspection-building/components/building-anomaly-detail/building-anomaly-detail.component.html
+++ b/Ionic4/src/app/inspection-building/components/building-anomaly-detail/building-anomaly-detail.component.html
@@ -1,3 +1,39 @@
-<p>
-  building-anomaly-detail works!
-</p>
+<ion-toolbar color="primary">
+  <ion-buttons slot="start">
+      <ion-button slot="icon-only" (click)="onCancelEdition()">
+          <ion-icon name="arrow-back"></ion-icon>
+      </ion-button>
+  </ion-buttons>
+  <ion-title>{{'anomalyDetail' | translate}}</ion-title>
+</ion-toolbar>
+
+<ion-content [formGroup]="form">
+  <ion-list class="list-items">
+      <button ion-item [class.invalid]="!form.controls.theme.valid" (click)="onSelectAnomaly()">
+          <ion-label item-start>{{'theme' | translate}}</ion-label>
+          <ion-label item-content>{{form.value.theme}}</ion-label>
+      </button>
+      <div *ngIf="!form.controls.theme.valid" class="validation-error-text">{{'requiredInformation' | translate}}</div>
+
+      <ion-item-group>
+          <ion-item-divider>{{'notes' | translate}}</ion-item-divider>
+          <ion-item [class.invalid]="!form.controls.notes.valid">
+              <ion-textarea maxlength="500" formControlName="notes"></ion-textarea>
+          </ion-item>
+          <div *ngIf="!form.controls.notes.valid" class="validation-error-text">{{'requiredInformation' | translate}}</div>
+      </ion-item-group>
+  </ion-list>
+
+  <app-pictures [repo]="picRepo" height="350px" [saveAuto]="false" formControlName="id">{{'loading' | translate}}</app-pictures>
+</ion-content>
+
+<ion-footer class="page-footer">
+  <ion-toolbar color="primary">
+      <ion-buttons left>
+          <ion-button *ngIf="!isNew" (click)="onDeleteAnomaly()">
+              <ion-icon name="trash" slot="start"></ion-icon>
+              {{'anomalyDeleteButton' | translate}}
+          </ion-button>
+      </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
